Actions
Bug #2668
closedsyntax error in terminfo.src trips uninitialized var in tic, screws terminfo
Start date:
2012-05-01
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
termcap.src contains stray (but grammatical) commas in the descriptions of the screen.*bce-s terminals. These cause the associated entries to not parse.
Separately, an uninitialized token type variable in the tic compiler may cause the invalid tokens caused by thus to read as EOF (or any other token type, valid or not), and thus terminate the parse early (and/or cause havoc).
also, just reading through this, there's a hilariously obvious buffer over run in some dead code used to debug tic.
Updated by Rich Lowe about 10 years ago
- Subject changed from syntax error in termcap.src trips uninitialized var in tic, screws terminfo to syntax error in terminfo.src trips uninitialized var in tic, screws terminfo
Updated by Yuri Pankov about 10 years ago
Problem is in ancient tic and friends, not in term{cap,info}.src.
Updated by Rich Lowe about 10 years ago
- Status changed from In Progress to Resolved
- % Done changed from 80 to 100
- Tags deleted (
needs-triage)
Resolved in r13679 commit:1b5898b11b55
Actions